--- a/package.json
+++ b/package.json
@@ -6,20 +6,33 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
-		"build": "wp-scripts build",
+		"build": "npm run build:css && wp-scripts build",
+		"start": "npm run start:css & wp-scripts start",
 		"format": "wp-scripts format",
+		"test": "jest",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
+		"build:css": "postcss src/*.css -d build",
+		"start:css": "npx postcss src/*.css -d build -w",
 		"packages-update": "wp-scripts packages-update",
-		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+		"plugin-zip": "wp-scripts plugin-zip"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
 		"@wordpress/eslint-plugin": "^14.6.0",
 		"@wordpress/prettier-config": "^2.16.0",
 		"@wordpress/scripts": "^26.4.0",
 		"eslint": "^8.40.0",
 		"eslint-config-prettier": "^8.8.0",
-		"prettier": "^2.8.8"
+		"jest": "^29.5.0",
+		"postcss-cli": "^10.1.0",
+		"prettier": "^2.8.8",
+		"tailwindcss": "^3.3.2"
+	},
+	"dependencies": {
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.23"
 	}
 }
