--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
+		"@wordpress/env": "^7.0.0",
 		"@wordpress/eslint-plugin": "^14.6.0",
 		"@wordpress/prettier-config": "^2.16.0",
 		"@wordpress/scripts": "^26.4.0",
