--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"dependencies": {
 		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.23"
+		"postcss": "^8.4.23",
+		"react-beautiful-dnd": "^13.1.1"
 	}
 }
