--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
 		"tailwindcss": "^3.3.2"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.0.8",
+		"@dnd-kit/sortable": "^7.0.2",
+		"@dnd-kit/utilities": "^3.2.1",
+		"array-move": "^4.0.0",
 		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.23",
-		"react-beautiful-dnd": "^13.1.1"
+		"classnames": "^2.3.2",
+		"postcss": "^8.4.23"
 	}
 }
