--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"array-move": "^4.0.0",
 		"autoprefixer": "^10.4.14",
 		"classnames": "^2.3.2",
+		"marked": "^5.0.2",
 		"postcss": "^8.4.23"
 	}
 }
