--- a/package.json
+++ b/package.json
@@ -18,13 +18,24 @@
 		"plugin-zip": "wp-scripts plugin-zip"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.22.5",
+		"@babel/preset-react": "^7.22.5",
 		"@tailwindcss/typography": "^0.5.9",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
+		"@wordpress/api-fetch": "^6.32.0",
+		"@wordpress/block-editor": "^12.3.0",
+		"@wordpress/data": "^9.5.0",
+		"@wordpress/element": "^5.12.0",
 		"@wordpress/env": "^7.0.0",
 		"@wordpress/eslint-plugin": "^14.6.0",
+		"@wordpress/hooks": "^3.35.0",
+		"@wordpress/i18n": "^4.35.0",
 		"@wordpress/prettier-config": "^2.16.0",
 		"@wordpress/scripts": "^26.4.0",
+		"@wordpress/server-side-render": "^4.12.0",
+		"@wordpress/url": "^3.36.0",
+		"babel-jest": "^29.5.0",
 		"eslint": "^8.40.0",
 		"eslint-config-prettier": "^8.8.0",
 		"jest": "^29.5.0",
